Correcting toast text wrap on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -460,6 +460,7 @@ body {
     position: fixed;
     transform: translate(-50%, 0px);
     z-index: 9999;
+    overflow-wrap: break-word;
 }
 
 .contact-jumbotron-section {
